--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 *.DS_Store
+# Go folders
+vendor/
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
 *.so
 moscar
+gomoscar
 # Folders
 _obj
 _test
